# AI_for_bioscience

./: 01_Exercise_KMeans.ipynb  02_Exercise_PCA.ipynb  03_Exercise_Neural_Network.ipynb  README.md  functions_kmeans.py  pyproject.toml
