[tool.poetry]
name = "ai-for-bioscience"
version = "0.1.0"
description = ""
authors = ["LydiaFrance <lfrance@turing.ac.uk>"]
readme = "README.md"
packages = [{include = "ai_for_bioscience"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.1.3"
numpy = "^1.23.5"
seaborn = "^0.12.1"
pandas = "^1.5.2"
ipykernel = "^6.17.1"
palmerpenguins = "^0.1.4"
keras = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
